# INF1015-TD6-Projet

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json
TD6/: CMakeUserPresets.json  Cavalier.cpp  Cavalier.h  Cavalier.hpp  DeplacementTemp.hpp  Echiquier.cpp  Echiquier.h  Echiquier.hpp  FenetreJeu.cpp  FenetreJeu.h  FenetreJeu.hpp  Piece.cpp  Piece.h  Piece.hpp  Position.h  Position.hpp  ProjetTestQt.sln  ProjetTestQt.vcxproj  ProjetTestQt.vcxproj.filters  Roi.cpp  Roi.h  Roi.hpp  RoiEnTropException.hpp  TD6.slnx  Tour.cpp  Tour.h  Tour.hpp  cmake_cours.cmake  main.cpp
